[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                 # error handling
bytes = "1.3.0"                                   # helps manage buffers
thiserror = "1.0.38"                              # error handling
clap = { version = "4.5", features = ["derive"] }
pretty_env_logger = "0.5"
log = "0.4"
regex = "1.12.2"
